// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/JobsHeader default 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "home",
        "pathname": "/",
        "search": "",
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <div
    style={
      Object {
        "height": "100%",
        "padding": "24px",
        "width": "100%",
      }
    }
  >
    <JobsHeader
      className=""
      jobs={
        Array [
          Object {
            "internalBuildNumber": 1,
            "meta": Object {
              "webpack": Object {
                "builtAt": "2019-01-01T00:00:00.000Z",
                "hash": "abcd1234",
              },
            },
            "summary": Object {
              "webpack": Object {
                "totalSizeByTypeALL": Object {
                  "baseline": 900000,
                  "current": 1000000,
                },
              },
            },
          },
        ]
      }
    />
  </div>
</Router>
`;

exports[`Storyshots Components/JobsHeader multiple equal jobs 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "home",
        "pathname": "/",
        "search": "",
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <div
    style={
      Object {
        "height": "100%",
        "padding": "24px",
        "width": "100%",
      }
    }
  >
    <JobsHeader
      className=""
      jobs={
        Array [
          Object {
            "internalBuildNumber": 1,
            "meta": Object {
              "webpack": Object {
                "builtAt": "2019-01-01T00:00:00.000Z",
                "hash": "abcd1234",
              },
            },
            "summary": Object {
              "webpack": Object {
                "totalSizeByTypeALL": Object {
                  "baseline": 1000000,
                  "current": 1000000,
                },
              },
            },
          },
          Object {
            "internalBuildNumber": 2,
            "meta": Object {
              "webpack": Object {
                "builtAt": "2019-01-02T00:00:00.000Z",
                "hash": "efgh1234",
              },
            },
            "summary": Object {
              "webpack": Object {
                "totalSizeByTypeALL": Object {
                  "baseline": 1000000,
                  "current": 1000000,
                },
              },
            },
          },
        ]
      }
    />
  </div>
</Router>
`;

exports[`Storyshots Components/JobsHeader multiple jobs 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "home",
        "pathname": "/",
        "search": "",
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <div
    style={
      Object {
        "height": "100%",
        "padding": "24px",
        "width": "100%",
      }
    }
  >
    <JobsHeader
      className=""
      jobs={
        Array [
          Object {
            "internalBuildNumber": 1,
            "meta": Object {
              "webpack": Object {
                "builtAt": "2019-01-01T00:00:00.000Z",
                "hash": "abcd1234",
              },
            },
            "summary": Object {
              "webpack": Object {
                "totalSizeByTypeALL": Object {
                  "baseline": 900000,
                  "current": 1000000,
                },
              },
            },
          },
          Object {
            "internalBuildNumber": 2,
            "meta": Object {
              "webpack": Object {
                "builtAt": "2019-01-02T00:00:00.000Z",
                "hash": "efgh1234",
              },
            },
            "summary": Object {
              "webpack": Object {
                "totalSizeByTypeALL": Object {
                  "baseline": 0,
                  "current": 900000,
                },
              },
            },
          },
        ]
      }
    />
  </div>
</Router>
`;
